--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+- Version 1.1.2.
+
+* Add merdiems (am/pm) to locales when empty
+
 - Version 1.0.24.
 
  * Upgrade IANA TZ Database for `2019b`. #328.
